Extend index creation for PostgreSQL, hnsw and ivfflat defaulting to l2 metric